# mcp_things1

./: .gitignore  README.md  docker-compose.yml  example.env  mcp_architecture.md  sequence_diagram.md  system_prompt.md  temp_message.md  test_script.py
code-executor/: Dockerfile  requirements.txt
code-executor/app/: main.py
examples/: client.py
mcp-server/: Dockerfile  pyproject.toml  requirements.txt
mcp-server/app/: __init__.py
mcp-server/app/mcp_server/: __main__.py  config.py  sdk.py  server.py
mcp-server/app/mcp_server/tools/: code_execution.py  time.py
middleware/: Dockerfile  requirements.txt
middleware/app/: config.py  main.py
sandbox/: Dockerfile  requirements.txt
sandbox/app/: main.py
time-client/: Dockerfile
time-client/app/: main.py
